# libopenaes

./: .gitignore  CMakeLists.txt  Readme.md  package.json
emscripten/: emscripten.openaes.post.js  makefile
src/: openaes.c
test/: CMakeLists.txt  gtest.cpp
test/data/: oaes_expand_key.csv
